[package]
name = "map_elites_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
env_logger = "0.10.0"
indicatif = "0.17.6"
log = "0.4.20"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
